Clean up instantiation a bit
Remove weird method names and use a simple constructor.

Change-Id: Ie569b82d7de7dcc3b4e1ce228843ea33bd25644c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>